Se agrega el swagger del api
